@@ -1,5 +1,7 @@
 === ongoing (0.2.X - to be released as 0.3) ===
 
+- Added active field to account
+- Hide inactive accounts and remove them from yearly overview
 - Added transaction export view
 - Fixed freckle integration
 - Added payee management views
